--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "jwt-simple": "^0.5.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.6",
