--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.15.5",
     "jwt-simple": "^0.5.1",
     "morgan": "~1.9.0",
+    "mysql2": "^1.4.2",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
