Update code with bluebird

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-messages": "^1.6.6",
     "angular-ui-router": "^0.4.3",
     "aws-sdk": "^2.153.0",
+    "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "credential": "^2.0.0",
