--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "~4.15.5",
     "jimp": "^0.2.28",
     "jwt-simple": "^0.5.1",
-    "mkdirp": "^0.5.1",
+    "mkdirp-promise": "^5.0.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
