--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "angular-aria": "^1.6.6",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
-    "angular-ui-router": "^0.4.3",
+    "@uirouter/angularjs": "latest",
     "aws-sdk": "^2.153.0",
     "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
