--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "6.11.3",
+    "node": "7.10.1",
     "npm": "5.5.1"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.12",
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
-    "@uirouter/angularjs": "latest",
     "aws-sdk": "^2.153.0",
     "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
