--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
     "angular-loading-bar": "^0.9.0",
+    "angular-masonry": "^0.17.0",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.6",
     "aws-sdk": "^2.153.0",
@@ -25,8 +26,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "imagesloaded": "^4.1.4",
     "jimp": "^0.2.28",
     "jwt-simple": "^0.5.1",
+    "masonry-layout": "^4.2.1",
     "mkdirp-promise": "^5.0.1",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
