--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.6.6",
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
+    "angular-fancybox-plus": "^1.0.3",
     "angular-loading-bar": "^0.9.0",
     "angular-masonry": "^0.17.0",
     "angular-material": "^1.1.5",
