--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^1.4.2",
     "ng-alertify": "^1.0.2",
     "node-sass-middleware": "0.9.8",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
