--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "passport-local-authenticate": "^1.2.0",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "3.31.0",
+    "sequelize": "^3.31.0",
     "sequelize-cli": "^3.0.0",
     "serve-favicon": "~2.4.5",
     "winston": "^2.4.0"
