--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "credential": "^2.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "exif": "^0.6.0",
     "express": "~4.15.5",
     "imagesloaded": "^4.1.4",
     "jimp": "^0.2.28",
