--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "ng-alertify": "^1.0.2",
-    "node-sass-middleware": "0.9.8",
+    "node-sass": "^4.11.0",
+    "node-sass-middleware": "^0.11.0",
     "nodemailer": "^4.4.2",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
